@@ -3,6 +3,7 @@
 + Added the ability to sort wishlists by review scores, which will display the highest rated items first
 + Added some behind the scenes updates to OpenCritic reviews, should now display correctly on all pages
 : Updated SteamRep section on profile pages to use updated API and safer code
+: Updated market code so that an items lowest price is shown on subsequent pages
 : Fixed a bug where Steam Card Exchange links would not display properly on store pages
 : Fixed a bug where the Ukraine region had an incorrect ISO code
 : Fixed a bug where SteamDB links were not correctly formed on some pages
